# Analytical-Displacement-Mapping

./: .gitignore  README.md
source/: CMakeLists.txt  main.cpp  mainview.cpp  mainview.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  settings.h  shadertypes.h
source/initialization/: meshinitializer.cpp  meshinitializer.h  objfile.cpp  objfile.h
source/mesh/: face.cpp  face.h  halfedge.cpp  halfedge.h  mesh.cpp  mesh.h  vertex.cpp  vertex.h
source/renderers/: meshrenderer.cpp  meshrenderer.h  renderer.cpp  renderer.h  tessrenderer.cpp  tessrenderer.h
source/shaders/: bicubic.tesc  bicubic.tese  displace.frag  displace.tesc  displace.tese  displace.vert  patch.tesc  patch.tese  phong.frag  phong.vert  procedural.glsl  shading.glsl
source/subdivision/: catmullclarksubdivider.cpp  catmullclarksubdivider.h  subdivider.cpp  subdivider.h
source/testing/: surface.py
source/util/: turbocolormap.cpp  turbocolormap.h  util.cpp  util.h
